{mensaje_del_commit}

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -171,7 +171,7 @@ h6,
     background: $primary;
 }
 
-.service-icon {
+.servicio-icon {
     margin-right: 15px;
     width: 45px;
     height: 45px;
