--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 /******* Bootstrap Theming ********/
 // #b4bb93 color verde
-$primary: #DA9F5B;
-$secondary: #33211D;
+$primary: #a7b288;
+$secondary: #a37f53;
 $light: #FFFBF2;
 $dark: #111111;
 
